--- a/theme/css/components.css
+++ b/theme/css/components.css
@@ -3,6 +3,11 @@
 :root {
   --black: #000;
   --white: #fff;
+  --spacing: 1rem;
+}
+
+ul {
+  list-style: none;
 }
 
 .c-black {
@@ -21,7 +26,7 @@
 .inner-wrapper {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 1em;
+  padding: var(--spacing);
 }
 .d-flex {
   display: flex;
@@ -30,7 +35,7 @@
   display: none;
 }
 .btn {
-  padding: .5em;
+  padding: calc(var(--spacing) / 2);
   font-size: var(--fs-sm);
   background-color: var(--black);
   color: var(--white);
