--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -5,42 +5,72 @@
  */
 
 
-header > .inner-wrapper {
+ /* header */
+.header > .inner-wrapper {
   justify-content: space-between;
   align-items: center;
 }
-
 .main-menu--desktop {
   flex: 1 2 auto;
 }
+.main-menu--desktop > ul {
+  justify-content: space-between;
+  align-items: center;
+  max-width: 400px;
+  margin: auto;
+}
 
 /* Sección principal */
-.main-section {
+.main-section > .inner-wrapper {
   flex-wrap: wrap;
   justify-content: center;
 }
 .main-section__image {
   max-width: 70%;
 }
-.main-section__text {
-  padding: 1em 0;
+.main-section__inner-wrapper {
+  flex-wrap: wrap;
 }
-.main-section__text > h1 {
-  margin-bottom: 1rem;
+.main-section__text {
+  flex-wrap: wrap;
+  padding: var(--spacing) 0;
+  gap: var(--spacing);
 }
 .main-section__social > ul {
-  list-style: none;
-  max-width: 200px;
+  gap: var(--spacing);
+  max-width: 250px;
+  margin-top: var(--spacing);
   justify-content: space-between;
 }
 .main-section__social > ul > li {
-  margin-top: 1em;
   width: 40px;
   height: 40px;
   align-items: center;
   justify-content: center;
   border: 2px solid;
   border-radius: 4px;
+}
+
+/*  skills  */
+
+.skills-section > .inner-wrapper,
+.skills,
+.skill {
+  flex-wrap: wrap;
+  gap: var(--spacing);
+}
+.skill {
+  justify-content: center;
+  padding: var(--spacing);
+  border: 2px solid;
+  width: 80px;
+  height: 80px;
+}
+.skill > p {
+  font-size: 10px;
+}
+.skill > img {
+  height: 30px;
 }
 
 /* RESPONSIVE */
@@ -52,13 +82,6 @@ header > .inner-wrapper {
   .main-menu--desktop,
   .btn-cv {
     display: block;
-  }
-  .main-menu--desktop > ul {
-    list-style: none;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 400px;
-    margin: auto;
   }
 }
 
