--- a/theme/css/components.css
+++ b/theme/css/components.css
@@ -4,10 +4,7 @@
   --black: #000;
   --white: #fff;
   --spacing: 1rem;
-}
-
-ul {
-  list-style: none;
+  --radius: 4px;
 }
 
 .c-black {
@@ -22,11 +19,8 @@ ul {
 .bg-white {
   background-color: var(--white);
 }
-
-.inner-wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: var(--spacing);
+.fill-white {
+  filter: invert(100%) sepia(99%) saturate(0%) hue-rotate(301deg) brightness(111%) contrast(100%);
 }
 .d-flex {
   display: flex;
@@ -40,5 +34,8 @@ ul {
   background-color: var(--black);
   color: var(--white);
   border: none;
-  border-radius: 4px;
+  border-radius: var(--radius);
+}
+.border-solid {
+  border: 1px solid var(--black)
 }
